add new content

--- a/src/content/.obsidian/app.json
+++ b/src/content/.obsidian/app.json
@@ -1,5 +1,6 @@
 {
   "showUnsupportedFiles": false,
   "promptDelete": true,
-  "propertiesInDocument": "visible"
+  "propertiesInDocument": "visible",
+  "alwaysUpdateLinks": true
 }
